# AILND

./: .env.template  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_app.command
internal/custom_types/: quiz.py
internal/handlers/: course.py  intelligence.py  section.py  student_progress.py
internal/intelligence/tools/: retriever.py
internal/repository/: course.py  student_progress.py
internal/utils/: db.py  ppt_generator.py  storage.py
pages/: content_creator_course_list.py  course_detail.py  course_editor.py  course_index.py  course_list.py  metrics.py  quiz_editor.py  section_editor.py  take_content.py  take_quiz.py
